# auto-dalle-client

./: CMakeLists.txt  main.c  vcpkg.json
scripts/: downloadImage.h  parseJson.h  sendRequest.h
util/: logger.h  readAllFiles.h
